# cf-stats

./: README.md  pyproject.toml
cf_stats.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cfstats/: api.py  cache.py  cli.py  types.py
