[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cf-stats"
version = "0.1.0"
description = "Codeforces Personal Quick Stats CLI"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Your Name"}]
keywords = ["codeforces", "cli", "stats", "competitive-programming"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Environment :: Console",
  "Topic :: Utilities",
]
dependencies = [
    "requests>=2.31.0",
    "rich>=13.7.0",
    "platformdirs>=4.2.0",
]

[project.urls]
Homepage = "https://github.com/yourname/cf-stats"
"Source Code" = "https://github.com/yourname/cf-stats"

[project.scripts]
cf-stats = "cfstats.cli:main"


